--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@
 
 
 body{
-  background: linear-gradient(to left,#27272F,transparent), url("/img/photo-1559060036-7441babe74ad.jpeg") no-repeat; 
+  background: linear-gradient(to left,transparent,#27272F), url("/img/photo-1559060036-7441babe74ad.jpeg") no-repeat; 
   min-height: 100%;  
 }
 
@@ -41,16 +41,16 @@ body{
 }
 
 .forcast_box{  
-    width: 500px;
+    width: 700px;
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr 1fr; 
     grid-column-gap: 20px;
-    margin: -600px 15px auto 1300px
+    margin: -750px 15px auto 1300px
 }
 
 .box{
-    border: 5px solid red;
-    height: 200px;
+    border: 5px solid darkgrey;
+    height: 400px;
 }
 
 .radar{
@@ -58,5 +58,5 @@ body{
     height: 500px;
     width: 500px;
     display: grid;
-    margin: -350px 15px auto 2000px;
+    margin: -450px 15px auto 2000px;
 }
